<resources>
    <string name="app_name">Hrybkov AI-182 Lab1</string>
    <string name="error_message">Error</string>
    <string name="clear">CLEAR</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="asterisk">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="delete">DEL</string>
    <string name="equal">=</string>
    <string name="clear_last">C</string>
</resources>