<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_input_height"
        android:layout_gravity="end"
        android:ellipsize="start"
        android:singleLine="true"
        android:textColor="@color/actionButton"
        android:textSize="@dimen/tv_input_text_size" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_result_height"
        android:layout_gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_result_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvClear"
                style="@style/ActionButtonStyle"
                android:text="@string/clear" />

            <TextView
                android:id="@+id/tvClearLast"
                style="@style/ActionButtonStyle"
                android:text="@string/clear_last" />

            <TextView
                android:id="@+id/tvDivide"
                style="@style/ActionButtonStyle"
                android:text="@string/division" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                style="@style/NumberButtonStyle"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/tvEight"
                style="@style/NumberButtonStyle"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/tvNine"
                style="@style/NumberButtonStyle"
                android:text="@string/nine" />

            <TextView
                android:id="@+id/tvMul"
                style="@style/NumberActionButton2"
                android:text="@string/asterisk" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFour"
                style="@style/NumberButtonStyle"
                android:text="@string/four" />

            <TextView
                android:id="@+id/tvFive"
                style="@style/NumberButtonStyle"
                android:text="@string/five" />

            <TextView
                android:id="@+id/tvSix"
                style="@style/NumberButtonStyle"
                android:text="@string/six" />

            <TextView
                android:id="@+id/tvMinus"
                style="@style/NumberActionButton2"
                android:text="@string/minus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                style="@style/NumberButtonStyle"
                android:text="@string/one" />

            <TextView
                android:id="@+id/tvTwo"
                style="@style/NumberButtonStyle"
                android:text="@string/two" />

            <TextView
                android:id="@+id/tvThree"
                style="@style/NumberButtonStyle"
                android:text="@string/three" />

            <TextView
                android:id="@+id/tvPlus"
                style="@style/NumberActionButton2"
                android:text="@string/plus" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDot"
                style="@style/NumberButtonStyle"
                android:text="@string/point" />

            <TextView
                android:id="@+id/tvZero"
                style="@style/NumberButtonStyle"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/tvBack"
                style="@style/NumberButtonStyle"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/tvEquals"
                style="@style/EqualButtonStyle"
                android:text="@string/equal" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>